update quarter 2 scores; re-calculate gpa; update leetcode count

--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
         <ul class="list list--bare">
             <li class="event">
                 <span class="event__interval">Sep 2019-<br></span>
-                <span class="event__detail">Master of Science in Computer Engineering, GPA 3.75/4.00<br>
+                <span class="event__detail">Master of Science in Computer Engineering, GPA 3.88/4.00<br>
                     Northwestern University, Evanston IL, US</span>
             </li>
             <li class="event">
@@ -89,19 +89,19 @@
             </li>
             <li class="course">
                 <span class="course__name">Operating Systems</span>
-                <span class="course__score">-</span>
+                <span class="course__score">A</span>
             </li>
             <li class="course">
                 <span class="course__name">Compilers</span>
-                <span class="course__score">-</span>
+                <span class="course__score">A</span>
             </li>
             <li class="course">
                 <span class="course__name">Computer Networks</span>
-                <span class="course__score">-</span>
+                <span class="course__score">A</span>
             </li>
             <li class="course">
                 <span class="course__name">Deep Learning</span>
-                <span class="course__score">-</span>
+                <span class="course__score">A</span>
             </li>
         </ul>
 
