--- a/cv-zh.html
+++ b/cv-zh.html
@@ -28,7 +28,7 @@
         <ul class="list list--bare">
             <li class="event">
                 <span class="event__interval">2019/9-2020/12</span>
-                <span class="event__detail">计算机工程，硕士，美国西北大学，GPA 3.75/4.00</span>
+                <span class="event__detail">计算机工程，硕士，美国西北大学，GPA 3.88/4.00</span>
             </li>
             <li class="event">
                 <span class="event__interval">2015/9-2019/6</span>
@@ -91,19 +91,19 @@
             </li>
             <li class="course">
                 <span class="course__name">操作系统</span>
-                <span class="course__score">在上</span>
+                <span class="course__score">A</span>
             </li>
             <li class="course">
                 <span class="course__name">编译器</span>
-                <span class="course__score">在上</span>
+                <span class="course__score">A</span>
             </li>
             <li class="course">
                 <span class="course__name">计算机网络</span>
-                <span class="course__score">在上</span>
+                <span class="course__score">A</span>
             </li>
             <li class="course">
                 <span class="course__name">深度学习</span>
-                <span class="course__score">在上</span>
+                <span class="course__score">A</span>
             </li>
         </ul>
 
@@ -278,7 +278,7 @@
                     <li>了解Java、TypeScript、Rust、C++</li>
                     <li>了解<strong>Flask、SQLAlchemy、Vue.js</strong></li>
                     <li>熟悉<strong>Numpy、Scipy、Pandas、Matplotlib</strong></li>
-                    <li>Leetcode已完成600题*、周赛全球排名前4%</li>
+                    <li>Leetcode已完成700题*、周赛全球排名前4%</li>
                 </ul>
 
             </li>
