add new projects, update gpa

--- a/cv-zh.html
+++ b/cv-zh.html
@@ -28,7 +28,7 @@
         <ul class="list list--bare">
             <li class="event">
                 <span class="event__interval">2019/9-2020/12</span>
-                <span class="event__detail">计算机工程，硕士，美国西北大学，GPA 3.88/4.00</span>
+                <span class="event__detail">计算机工程，硕士，美国西北大学，GPA 3.91/4.00</span>
             </li>
             <li class="event">
                 <span class="event__interval">2015/9-2019/6</span>
@@ -103,6 +103,18 @@
             </li>
             <li class="course">
                 <span class="course__name">深度学习</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">分布式系统</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">并行编程</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">可扩展架构设计</span>
                 <span class="course__score">A</span>
             </li>
         </ul>
@@ -210,6 +222,16 @@
                     </ul>
                 </span>
             </li>
+            <li class="event">
+                <span class="event__interval">2020/6</span>
+                <span class="event__detail event--highlighted">
+                    <code>ray-tracer</code>，Rust实现的光线追踪渲染器
+                    <!-- <ul class="tasks">
+                        <li>SQL编程：查询、触发器、事务、子过程</li>
+                        <li>用Python实现了基于<code>ncurses</code>的字符界面</li>
+                    </ul> -->
+                </span>
+            </li>
             <!-- <li class="event event--highlighted">
                 <span class="event__interval">2017/2-2017/10</span>
                 <span class="event__detail">
@@ -274,8 +296,8 @@
             <li class="skill">
                 <h2 class="skill__category">编程</h2>
                 <ul class="skill__list">
-                    <li>熟悉Python、C、JavaScript、SQL、CSS</li>
-                    <li>了解Java、TypeScript、Rust、C++</li>
+                    <li>熟悉Python、C、JavaScript、SQL、Rust</li>
+                    <li>了解Java、TypeScript、C++、CSS</li>
                     <li>了解<strong>Flask、SQLAlchemy、Vue.js</strong></li>
                     <li>熟悉<strong>Numpy、Scipy、Pandas、Matplotlib</strong></li>
                     <li>Leetcode已完成700题*、周赛全球排名前4%</li>
