--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
         <ul class="list list--bare">
             <li class="event">
                 <span class="event__interval">Sep 2019-<br></span>
-                <span class="event__detail">Master of Science in Computer Engineering, GPA 3.88/4.00<br>
+                <span class="event__detail">Master of Science in Computer Engineering, GPA 3.91/4.00<br>
                     Northwestern University, Evanston IL, US</span>
             </li>
             <li class="event">
@@ -101,6 +101,18 @@
             </li>
             <li class="course">
                 <span class="course__name">Deep Learning</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Distributed Systems</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Concurrent Programming</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Scalable Architectures</span>
                 <span class="course__score">A</span>
             </li>
         </ul>
@@ -277,6 +289,17 @@
                     <!-- * Repository: <a href="http://github.com/aiifabbf/nu-hub">http://github.com/aiifabbf/nu-hub</a> -->
                 </span>
             </li>
+            <li class="event">
+                <span class="event__interval">Jun 2020</span>
+                <span class="event__detail event--highlighted">
+                    <code>ray-tracer</code>, a ray-tracing renderer in Rust
+                    <!-- <ul class="tasks">
+                        <li>SQL query, trigger, transaction and procedure coding</li>
+                        <li><code>ncurses</code>-based retro-style terminal GUI written in Python</li>
+                    </ul> -->
+                    <!-- * Repository: <a href="http://github.com/aiifabbf/ray-tracer">http://github.com/aiifabbf/ray-tracer</a> -->
+                </span>
+            </li>
         </ul>
     </section>
 
@@ -286,9 +309,9 @@
             <!-- <li class="skill">
                 <h2 class="skill__category">Programming Languages</h2>
                 <ul class="skill__list"> -->
-            <li>Proficient in <strong>Python, C, JavaScript, SQL, CSS</strong></li>
-            <li>Knowledge of <strong>Java, TypeScript, Rust, C++</strong></li>
-            <li>Leetcode weekly contest enthusiast (top <strong>5%</strong>)</li>
+            <li>Proficient in <strong>Python, C, JavaScript, SQL, Rust</strong></li>
+            <li>Knowledge of <strong>Java, TypeScript, CSS, C++</strong></li>
+            <li>Leetcode weekly contest enthusiast (top <strong>4%</strong>)</li>
             <!-- </ul>
             </li>
             <li class="skill">
