add link to repo

--- a/cv-zh.html
+++ b/cv-zh.html
@@ -154,18 +154,18 @@
         <ul class="list list--bare">
             <li class="event event--highlighted">
                 <span class="event__interval">2019/10</span>
-                <span class="event__detail">
+                <a class="event__detail" href="http://github.com/aiifabbf/steve">
                     <code>steve</code>，计算机图形学课程项目
                     <ul class="tasks">
                         <li>用TypeScript实现了基于WebGL的简单3D图形库、可自定义时间函数、帧率无关的动画系统</li>
                         <li>基于Phong、Gourand着色模型和Phong、Blinn-Phong光照模型的GLSL着色器编程</li>
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
-                </span>
+                </a>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">2020/1</span>
-                <span class="event__detail">
+                <a class="event__detail" href="http://github.com/aiifabbf/simple-tcp">
                     <code>simple-tcp</code>，计算机网络课程项目
                     <ul class="tasks">
                         <li>用Python实现了基于UDP的类TCP可靠传输协议</li>
@@ -173,11 +173,11 @@
                         <li>基于互斥锁的多线程并行结构、后台发送、后台接收</li>
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
-                </span>
+                </a>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">2018/10<br>-2019/5</span>
-                <span class="event__detail">
+                <a class="event__detail" href="http://github.com/aiifabbf/sizer">
                     模拟电路自动化设计工具<code>sizer</code>，本科毕业设计项目
                     <ul class="tasks">
                         <li>Python实现的实时波形数据导入、波形分析、参数提取（平均每个波形<strong>≈50 μs</strong>）
@@ -186,7 +186,7 @@
                         </li>
                         <li>编写了可重用的轻量工具，方便读取电路网表、指定约束</li>
                     </ul>
-                </span>
+                </a>
             </li>
             <!-- <li class="event event--highlighted">
                 <span class="event__interval">2017/10-<br>2019/3</span>
@@ -214,23 +214,19 @@
             </li>
             <li class="event">
                 <span class="event__interval">2019/11</span>
-                <span class="event__detail event--highlighted">
+                <a class="event__detail event--highlighted" href="http://github.com/aiifabbf/nu-hub">
                     <code>nu-hub</code>，数据库课程项目
                     <ul class="tasks">
                         <li>SQL编程：查询、触发器、事务、子过程</li>
                         <li>用Python实现了基于<code>ncurses</code>的字符界面</li>
                     </ul>
-                </span>
+                </a>
             </li>
             <li class="event">
                 <span class="event__interval">2020/6</span>
-                <span class="event__detail event--highlighted">
+                <a class="event__detail event--highlighted" href="http://github.com/aiifabbf/ray-tracer">
                     <code>ray-tracer</code>，Rust实现的光线追踪渲染器
-                    <!-- <ul class="tasks">
-                        <li>SQL编程：查询、触发器、事务、子过程</li>
-                        <li>用Python实现了基于<code>ncurses</code>的字符界面</li>
-                    </ul> -->
-                </span>
+                </a>
             </li>
             <!-- <li class="event event--highlighted">
                 <span class="event__interval">2017/2-2017/10</span>
@@ -297,7 +293,7 @@
                 <h2 class="skill__category">编程</h2>
                 <ul class="skill__list">
                     <li>熟悉Python、C、JavaScript、SQL、Rust</li>
-                    <li>了解Java、TypeScript、C++、CSS</li>
+                    <li>了解Java、TypeScript、C++、CSS、Go</li>
                     <li>了解<strong>Flask、SQLAlchemy、Vue.js</strong></li>
                     <li>熟悉<strong>Numpy、Scipy、Pandas、Matplotlib</strong></li>
                     <li>Leetcode已完成700题*、周赛全球排名前4%</li>
@@ -336,7 +332,7 @@
                     </li>
                 </ul>
             </li>
-            *Leetcode个人首页 <a href="https://leetcode.com/aiifabbf/">https://leetcode.com/aiifabbf/</a>
+            *Leetcode个人首页 <a href="https://leetcode.com/aiifabbf/"><code>https://leetcode.com/aiifabbf/</code></a>
         </ul>
     </section>
 
