--- a/cv.html
+++ b/cv.html
@@ -204,7 +204,7 @@
         <ul class="list list--bare">
             <li class="event event--highlighted">
                 <span class="event__interval">Oct 2019</span>
-                <span class="event__detail">
+                <a class="event__detail" href="http://github.com/aiifabbf/steve">
                     <code>steve</code>, a course project for Computer Graphics
                     <ul class="tasks">
                         <li>Home-made naive 3D-engine around WebGL's drawing primitives in TypeScript</li>
@@ -213,11 +213,11 @@
                         <li>Frame-rate-independent animations with customizable Bezier-curved timing functions</li>
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
-                </span>
+                </a>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">Jan 2020</span>
-                <span class="event__detail">
+                <a class="event__detail" href="http://github.com/aiifabbf/simple-tcp">
                     <code>simple-tcp</code>, a course project for Computer Networking
                     <ul class="tasks">
                         <li>Build TCP-like reliable transport protocol on top of UDP using Python</li>
@@ -225,11 +225,11 @@
                         <li>Concurrent programmming with background worker threads and locks</li>
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
-                </span>
+                </a>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">Oct 2018-<br>Mar 2019</span>
-                <span class="event__detail">
+                <a class="event__detail" href="http://github.com/aiifabbf/sizer">
                     Project on analog circuit design automation and EDA tools: <code>sizer</code>.
                     <!-- <br>under supervision of Prof. Min Tan, College of Optical and Electronic Information, HUST. -->
                     <ul class="tasks">
@@ -244,7 +244,7 @@
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/sizer"><span
                             class="mail__link">http://github.com/aiifabbf/sizer</span></a> -->
-                </span>
+                    </a>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">Oct 2017-<br>Apr 2019</span>
@@ -280,25 +280,25 @@
             </li>
             <li class="event">
                 <span class="event__interval">Nov 2019</span>
-                <span class="event__detail event--highlighted">
+                <a class="event__detail event--highlighted" href="http://github.com/aiifabbf/nu-hub">
                     <code>nu-hub</code>, a course project for Database Systems
                     <ul class="tasks">
                         <li>SQL query, trigger, transaction and procedure coding</li>
                         <li><code>ncurses</code>-based retro-style terminal GUI written in Python</li>
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/nu-hub">http://github.com/aiifabbf/nu-hub</a> -->
-                </span>
+                </a>
             </li>
             <li class="event">
                 <span class="event__interval">Jun 2020</span>
-                <span class="event__detail event--highlighted">
+                <a class="event__detail event--highlighted" href="http://github.com/aiifabbf/ray-tracer">
                     <code>ray-tracer</code>, a ray-tracing renderer in Rust
                     <!-- <ul class="tasks">
                         <li>SQL query, trigger, transaction and procedure coding</li>
                         <li><code>ncurses</code>-based retro-style terminal GUI written in Python</li>
                     </ul> -->
                     <!-- * Repository: <a href="http://github.com/aiifabbf/ray-tracer">http://github.com/aiifabbf/ray-tracer</a> -->
-                </span>
+                </a>
             </li>
         </ul>
     </section>
@@ -310,7 +310,7 @@
                 <h2 class="skill__category">Programming Languages</h2>
                 <ul class="skill__list"> -->
             <li>Proficient in <strong>Python, C, JavaScript, SQL, Rust</strong></li>
-            <li>Knowledge of <strong>Java, TypeScript, CSS, C++</strong></li>
+            <li>Knowledge of <strong>Java, TypeScript, CSS, C++, Go</strong></li>
             <li>Leetcode weekly contest enthusiast (top <strong>4%</strong>)</li>
             <!-- </ul>
             </li>
