change email address

--- a/cv-zh.html
+++ b/cv-zh.html
@@ -15,8 +15,7 @@
         <h1 class="general__name">施宇晨</h1>
         <ul class="general__other">
             <!-- <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li> -->
-            <li class="mail"><a href="mailto:yuchenshi2021@u.northwestern.edu"
-                    class="mail__link">yuchenshi2021@u.northwestern.edu</a></li>
+            <li class="mail"><a href="mailto:aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li>
             <li class="site"><a href="https://github.com/aiifabbf" class="site__link">github.com/aiifabbf</a></li>
             <li class="phone">+1 773 273 1231</li>
             <li class="address">1930 Ridge Ave, Evanston IL, 60201</li>
@@ -296,7 +295,7 @@
                     <li>了解Java、TypeScript、C++、CSS、Go</li>
                     <li>了解<strong>Flask、SQLAlchemy、Vue.js</strong></li>
                     <li>熟悉<strong>Numpy、Scipy、Pandas、Matplotlib</strong></li>
-                    <li>Leetcode已完成700题*、周赛全球排名前4%</li>
+                    <li>Leetcode已完成800题*、周赛全球排名前3%</li>
                 </ul>
 
             </li>
