--- a/cv.html
+++ b/cv.html
@@ -16,8 +16,7 @@
         <h1 class="general__name">Yuchen SHI</h1>
         <ul class="general__other">
             <!-- <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li> -->
-            <li class="mail"><a href="mailto:yuchenshi2021@u.northwestern.edu"
-                    class="mail__link">yuchenshi2021@u.northwestern.edu</a></li>
+            <li class="mail"><a href="mailto:aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li>
             <li class="site"><a href="https://github.com/aiifabbf" class="site__link">github.com/aiifabbf</a></li>
             <li class="phone">+1 773 273 1231</li>
             <li class="address">1930 Ridge Ave, Evanston IL, 60201</li>
@@ -244,7 +243,7 @@
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/sizer"><span
                             class="mail__link">http://github.com/aiifabbf/sizer</span></a> -->
-                    </a>
+                </a>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">Oct 2017-<br>Apr 2019</span>
