--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,6 @@
     <section class="general">
         <h1 class="general__name">Yuchen SHI</h1>
         <ul class="general__other">
-            <!-- <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li> -->
             <li class="mail"><a href="mailto:aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li>
             <li class="site"><a href="https://github.com/aiifabbf" class="site__link">github.com/aiifabbf</a></li>
             <li class="phone">+1 773 273 1231</li>
@@ -223,8 +222,19 @@
                         <li>Optimize using delayed ACKs, packet aggregation, Nagle's algorithm and checksum</li>
                         <li>Concurrent programmming with background worker threads and locks</li>
                     </ul>
-                    <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
+                    <!-- * Repository: <a href="http://github.com/aiifabbf/simple-tcp">http://github.com/aiifabbf/simple-tcp</a> -->
                 </a>
+            </li>
+            <li class="event event--highlighted">
+                <span class="event__interval">April 2020</span>
+                <div class="event__detail">
+                    <code>news-search</code>, a real-time news article search engine
+                    <ul class="tasks">
+                        <li>Build RESTful APIs using Java Jersey and web crawler in Java</li>
+                        <li>Deploy server on AWS EC2 VPS and build indexes on ElasticSearch</li>
+                        <li>Build single-page application using React</li>
+                    </ul>
+                </div>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">Oct 2018-<br>Mar 2019</span>
@@ -244,22 +254,6 @@
                     <!-- * Repository: <a href="http://github.com/aiifabbf/sizer"><span
                             class="mail__link">http://github.com/aiifabbf/sizer</span></a> -->
                 </a>
-            </li>
-            <li class="event event--highlighted">
-                <span class="event__interval">Oct 2017-<br>Apr 2019</span>
-                <span class="event__detail">
-                    Research on spectrum analysis of photoacoustic imaging, A nation-financed project.
-                    <!-- <br>under supervision of Prof. Benpeng Zhu, College of Optical and Electronic Information, HUST. -->
-                    <ul class="tasks">
-                        <!-- <li>Code for image preprocessing: noise filter, transform and normalization</li>
-                            <li>Code for statistical feature extraction, image discretization and reconstruction</li> -->
-                        <li>Code for automated image processing and statistical feature extraction (<strong>≈1.5
-                                min</strong> per image)</li>
-                        <li><strong>10x</strong> speed-up with parallel and vectorized computing compared to original
-                            Matlab code</li>
-                        <li>Migrate 2k-line codebase from Matlab to Python</li>
-                    </ul>
-                </span>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">Mar 2018-<br>Apr 2019</span>
@@ -292,10 +286,6 @@
                 <span class="event__interval">Jun 2020</span>
                 <a class="event__detail event--highlighted" href="http://github.com/aiifabbf/ray-tracer">
                     <code>ray-tracer</code>, a ray-tracing renderer in Rust
-                    <!-- <ul class="tasks">
-                        <li>SQL query, trigger, transaction and procedure coding</li>
-                        <li><code>ncurses</code>-based retro-style terminal GUI written in Python</li>
-                    </ul> -->
                     <!-- * Repository: <a href="http://github.com/aiifabbf/ray-tracer">http://github.com/aiifabbf/ray-tracer</a> -->
                 </a>
             </li>
@@ -309,7 +299,7 @@
                 <h2 class="skill__category">Programming Languages</h2>
                 <ul class="skill__list"> -->
             <li>Proficient in <strong>Python, C, JavaScript, SQL, Rust</strong></li>
-            <li>Knowledge of <strong>Java, TypeScript, CSS, C++, Go</strong></li>
+            <li>Comfortable in <strong>Java, TypeScript, CSS, C++, Go</strong></li>
             <li>Leetcode weekly contest enthusiast (top <strong>4%</strong>)</li>
             <!-- </ul>
             </li>
