--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
         <h1>Education</h1>
         <ul class="list list--bare">
             <li class="event">
-                <span class="event__interval">Sep 2019-<br></span>
+                <span class="event__interval">Sep 2019-<br>Dec 2020</span>
                 <span class="event__detail">Master of Science in Computer Engineering, GPA 3.91/4.00<br>
                     Northwestern University, Evanston IL, US</span>
             </li>
